--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@nextui-org/modal": "^2.0.28",
     "framer-motion": "^10.17.9",
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/node": "^20",
