--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@nextui-org/modal": "^2.0.28",
+    "axios": "^1.6.5",
+    "fotmob": "^2.2.1",
     "framer-motion": "^10.17.9",
+    "mysql2": "^3.7.0",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "serverless-mysql": "^1.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
